# AgdaModuleImprovement

./: .gitignore  LICENSE  README.md
benching/: README.md  benching.cabal  stack.yaml
benching/agdaFiles/: fileSizeAverages.md
benching/agdaFiles/declSanityCheck/150decls/: Decls150Test1.agda  Decls150Test10.agda  Decls150Test11.agda  Decls150Test12.agda  Decls150Test13.agda  Decls150Test14.agda  Decls150Test15.agda  Decls150Test16.agda  Decls150Test17.agda  Decls150Test18.agda  Decls150Test19.agda  Decls150Test2.agda  Decls150Test20.agda  Decls150Test3.agda  Decls150Test4.agda  Decls150Test5.agda  Decls150Test6.agda  Decls150Test7.agda  Decls150Test8.agda  Decls150Test9.agda  averages.md  filesizes.md  medians.md  stats.md  times.md
benching/agdaFiles/declSanityCheck/450decls/: Decls450Test1.agda  Decls450Test10.agda  Decls450Test11.agda  Decls450Test12.agda  Decls450Test13.agda  Decls450Test14.agda  Decls450Test15.agda  Decls450Test16.agda  Decls450Test17.agda  Decls450Test18.agda  Decls450Test19.agda  Decls450Test2.agda  Decls450Test20.agda  Decls450Test3.agda  Decls450Test4.agda  Decls450Test5.agda  Decls450Test6.agda  Decls450Test7.agda  Decls450Test8.agda  Decls450Test9.agda  averages.md  filesizes.md  medians.md  stats.md  times.md
benching/agdaFiles/declSanityCheck/50decls/: Decls50Test1.agda  Decls50Test10.agda  Decls50Test11.agda  Decls50Test12.agda  Decls50Test13.agda  Decls50Test14.agda  Decls50Test15.agda  Decls50Test16.agda  Decls50Test17.agda  Decls50Test18.agda  Decls50Test19.agda  Decls50Test2.agda  Decls50Test20.agda  Decls50Test3.agda  Decls50Test4.agda  Decls50Test5.agda  Decls50Test6.agda  Decls50Test7.agda  Decls50Test8.agda  Decls50Test9.agda  averages.md  filesizes.md  medians.md  stats.md  times.md
benching/agdaFiles/modAlias/NestedAliases/: fileSizeAverages.md
benching/agdaFiles/slow/7Alias/: Issue1646Alias7Mod.agda  averages.md  stats.md  times.md
benching/app/: Main.hs
benching/experiments/: fileSizeAverages.md  fileSizeSummary.md
benching/experiments/declSanityCheck/150decls/: Decls150Test1.sa  Decls150Test10.sa  Decls150Test11.sa  Decls150Test12.sa  Decls150Test13.sa  Decls150Test14.sa  Decls150Test15.sa  Decls150Test16.sa  Decls150Test17.sa  Decls150Test18.sa  Decls150Test19.sa  Decls150Test2.sa  Decls150Test20.sa  Decls150Test3.sa  Decls150Test4.sa  Decls150Test5.sa  Decls150Test6.sa  Decls150Test7.sa  Decls150Test8.sa  Decls150Test9.sa  README.md  averages.md  filesizes.md  percentages.md  prefixes.md  stats.md  summary.md  times.md
benching/experiments/declSanityCheck/450decls/: Decls450Test1.sa  Decls450Test10.sa  Decls450Test11.sa  Decls450Test12.sa  Decls450Test13.sa  Decls450Test14.sa  Decls450Test15.sa  Decls450Test16.sa  Decls450Test17.sa  Decls450Test18.sa  Decls450Test19.sa  Decls450Test2.sa  Decls450Test20.sa  Decls450Test3.sa  Decls450Test4.sa  Decls450Test5.sa  Decls450Test6.sa  Decls450Test7.sa  Decls450Test8.sa  Decls450Test9.sa  README.md  averages.md  filesizes.md  percentages.md  prefixes.md  stats.md  summary.md  times.md
benching/experiments/declSanityCheck/50decls/: Decls50Test1.sa  Decls50Test10.sa  Decls50Test11.sa  Decls50Test12.sa  Decls50Test13.sa  Decls50Test14.sa  Decls50Test15.sa  Decls50Test16.sa  Decls50Test17.sa  Decls50Test18.sa  Decls50Test19.sa  Decls50Test2.sa  Decls50Test20.sa  Decls50Test3.sa  Decls50Test4.sa  Decls50Test5.sa  Decls50Test6.sa  Decls50Test7.sa  Decls50Test8.sa  Decls50Test9.sa  README.md  averages.md  filesizes.md  percentages.md  prefixes.md  stats.md  summary.md  times.md
benching/experiments/modAlias/NestedAliases/: fileSizeAverages.md  fileSizeSummary.md
benching/experiments/slow/7Alias/: Issue1646Alias7Mod.sa  averages.md  filesizes.md  percentages.md  prefixes.md  stats.md  summary.md  times.md
benching/raw/declSanityCheck/150decls/: Agda1269326247171100.dump  Agda1269380804918100.dump  Agda1269437572999500.dump  Agda1269504196202800.dump  Agda1269559093895800.dump  Agda1269612074706100.dump  Agda1269666208751800.dump  Agda1269720349555100.dump  Agda1269774041376500.dump  Agda1269825380341700.dump  Agda1513318550376100.dump  Agda1513402133388900.dump  Agda1513461980190500.dump  Agda1513518725913900.dump  Agda1513573794755900.dump  Agda1601603307398800.dump  Agda1601669003380700.dump  Agda1601732623924700.dump  Agda1601799672811500.dump  Agda1601860078724200.dump  Agda1601921640271500.dump  Agda1601991746094000.dump  Agda1602048884050300.dump  Agda1602105027967500.dump  Agda1602161897268000.dump  Agda1602219031819600.dump  Agda1602275144399900.dump  Agda1602332067610000.dump  Agda1602389027638200.dump  Agda1602447619122400.dump  Agda1685389654775700.dump  Agda1685451234527600.dump  Agda1685518773767100.dump  Agda1685581063967600.dump  Agda1685645115856100.dump  Agda1685700143489800.dump  (+164 more)
benching/src/: AgdaPrettyPrint.hs  AgdaRunner.hs  GenMain.hs  Generator.hs  Plots.py  Processing.hs  Rendering.hs  Runner.hs
version0/: README.md  stack.yaml  tcv0.cabal
version0/app/: Main.hs
version0/src/V0/: Equal.hs  Error.hs  LayoutToken.hs  ModuleTypeChecker.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeChecker.hs  Syntax.hs  TcMain.hs  TermTypeChecker.hs  TypeChecking.hs
version0/test/: Main.hs
version1/: README.md  playground.sa  tcv1.cabal
version1/app/: Main.hs
version1/src/V1/: Equal.hs  Error.hs  LayoutToken.hs  ModuleTypeChecker.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeChecker.hs  Syntax.hs  TcMain.hs  TermTypeChecker.hs  TypeChecking.hs
version1/test/: Main.hs
version2/: README.md  stack.yaml  tcv2.cabal
version2/app/: Main.hs
version2/src/V2/: Equal.hs  Error.hs  LayoutToken.hs  ModuleTypeChecker.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeChecker.hs  Syntax.hs  TcMain.hs  TermTypeChecker.hs  TypeChecking.hs
version2/test/: Main.hs
version3/: README.md  playground.sa  tcv3.cabal
version3/app/: Main.hs
version3/src/V3/: Equal.hs  Error.hs  LayoutToken.hs  ModuleTypeChecker.hs  Modules.hs  Parser.hs  PrettyPrint.hs  ScopeChecker.hs  Syntax.hs  TcMain.hs  TermTypeChecker.hs  TypeChecking.hs
version3/test/: Main.hs
(+9325 files in other folders)
