cabal-Version: 2.2
name: tcv0
version: 0.0.1

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds -O2
    -- -fno-warn-unused-imports
  default-extensions: 
    --EmptyDataDecls
    DefaultSignatures
    DeriveAnyClass
    --DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts 
    FlexibleInstances 
    GADTs 
    --GeneralizedNewtypeDeriving
    --ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    --ParallelListComp
    --PatternGuards
    RankNTypes
    --ScopedTypeVariables
    TupleSections
    --TypeSynonymInstances
    UndecidableInstances 
    --ViewPatterns
  build-depends:  
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    deepseq,
    mtl >= 2.2.1,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.2,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    containers,
    directory,
    filepath,
    timestats,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*      
 

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: 
    V0.Core.Parser
    V0.Core.PrettyPrint
    V0.Core.Syntax
    V0.TcEnvironment.ModuleEnvironment
    V0.TcEnvironment.TermEnvironment
    V0.Equal
    V0.Error
    V0.LayoutToken
    V0.Modules
    V0.ModuleTypeChecker
    V0.Parser
    V0.PrettyPrint
    V0.ScopeChecker
    V0.Syntax
    V0.TcMain
    V0.TermTypeChecker
    V0.TypeChecking    
  
executable tc
  import: shared-properties
  build-depends: tcv0
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-tc
  import: shared-properties
  build-depends: tcv0
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
