cabal-Version: 2.2
name: tcv1
version: 0.1

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds -O2
    -- -fno-warn-unused-imports
  default-extensions: 
    --EmptyDataDecls
    DefaultSignatures
    DeriveAnyClass
    --DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts 
    FlexibleInstances 
    GADTs 
    --GeneralizedNewtypeDeriving
    --ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    --ParallelListComp
    --PatternGuards
    RankNTypes
    --ScopedTypeVariables
    TupleSections
    --TypeSynonymInstances
    UndecidableInstances 
    --ViewPatterns
  build-depends:  
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    mtl >= 2.2.1,
    deepseq,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.2,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    containers,
    directory,
    filepath,
    timestats,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*      
 

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: 
    V1.Core.Parser
    V1.Core.PrettyPrint
    V1.Core.Syntax
    V1.TcEnvironment.ModuleEnvironment
    V1.TcEnvironment.TermEnvironment
    V1.Equal
    V1.Error
    V1.LayoutToken
    V1.Modules
    V1.ModuleTypeChecker
    V1.Parser
    V1.PrettyPrint
    V1.ScopeChecker
    V1.Syntax
    V1.TermTypeChecker
    V1.TcMain
    V1.TypeChecking    
  
executable tc
  import: shared-properties
  build-depends: tcv1
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-tc
  import: shared-properties
  build-depends: tcv1
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
