cabal-Version: 2.2
name: tcv2
version: 0.2

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds  -O2
    -- -fno-warn-unused-imports
  default-extensions: 
    --EmptyDataDecls
    DefaultSignatures
    DeriveAnyClass
    --DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts 
    FlexibleInstances 
    GADTs 
    --GeneralizedNewtypeDeriving
    --ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    --ParallelListComp
    --PatternGuards
    RankNTypes
    --ScopedTypeVariables
    TupleSections
    --TypeSynonymInstances
    UndecidableInstances 
    --ViewPatterns
  build-depends:  
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    mtl >= 2.2.1,
    deepseq,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.2,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    timestats == 0.1.0,
    containers,
    directory,
    filepath,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*      
 

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: 
    V2.Core.Parser
    V2.Core.PrettyPrint
    V2.Core.Syntax
    V2.TcEnvironment.ModuleEnvironment
    V2.TcEnvironment.TermEnvironment
    V2.Equal
    V2.Error
    V2.LayoutToken
    V2.Modules
    V2.ModuleTypeChecker
    V2.Parser
    V2.PrettyPrint
    V2.ScopeChecker
    V2.Syntax
    V2.TermTypeChecker
    V2.TcMain
    V2.TypeChecking    
  
executable tc
  import: shared-properties
  build-depends: tcv2
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-tc
  import: shared-properties
  build-depends: tcv2
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
